feat: add transaction template API
